--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # .github/workflows/build.yml
-name: Build Python Application
+name: Build Python Application for Windows
 
 on:
   push:
@@ -7,7 +7,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # --- التغيير الأساسي هنا: استخدام بيئة ويندوز ---
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
@@ -21,9 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
-        # If you have a requirements.txt file, uncomment the next line
-        # pip install -r requirements.txt
+        pip install pyinstaller pyperclip
 
     - name: Build with PyInstaller
       run: |
@@ -32,5 +31,6 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: clipboard-manager-executable
-        path: dist/clipboard_manager
+        name: clipboard-manager-windows-executable
+        # --- تحديد المسار الصحيح للملف الناتج بامتداد .exe ---
+        path: dist/clipboard_manager.exe
