--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # تثبيت كل المكتبات المطلوبة
-        pip install pyinstaller pyperclip pystray Pillow
+        # --- إضافة المكتبات الجديدة هنا ---
+        pip install pyinstaller pyperclip pystray Pillow ttkthemes pywin32
 
     - name: Build with PyInstaller
       run: |
-        # --noconsole: لإخفاء نافذة CMD
-        # --add-data "icon.ico;.": لدمج ملف الأيقونة مع البرنامج
         pyinstaller --name clipboard_manager --onefile --noconsole --add-data "icon.ico;." clipboard_manager.py
 
     - name: Upload artifact
