--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,33 @@
-# .github/workflows/build.yml
-name: Build Professional Clipboard Manager for Windows
+name: سحب الكوكيز
 
 on:
-  push:
-    branches: [ main ]
+  # يسمح لك بتشغيل هذا الـ workflow يدويًا من تبويب Actions
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest
+  extract-cookies:
+    # مهم جدًا: يجب تشغيل هذا على self-hosted runner
+    runs-on: self-hosted
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: سحب كود المستودع
+      uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: إعداد بيئة Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10' # يمكنك استخدام أي إصدار حديث
 
-    - name: Install dependencies
+    - name: تثبيت المكتبات المطلوبة
       run: |
         python -m pip install --upgrade pip
-        # --- تحديث قائمة المكتبات ---
-        pip install pyinstaller pyperclip pystray Pillow ttkbootstrap pywin32
+        pip install browser_cookie3
 
-    - name: Build with PyInstaller
-      run: |
-        # --name: تغيير اسم الملف التنفيذي
-        pyinstaller --name ClipboardManagerPro --onefile --noconsole --add-data "icon.ico;." clipboard_manager.py
+    - name: تشغيل سكربت سحب الكوكيز
+      run: python cookie_extractor.py # تأكد من أن اسم الملف صحيح
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
+    - name: رفع الكوكيز كـ artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: clipboard-manager-windows-executable
-        path: dist/ClipboardManagerPro.exe
+        name: cookies-files
+        path: cookies/
