--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,32 @@
-name: سحب الكوكيز
+name: Extract Cookies
 
 on:
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   extract-cookies:
+    # IMPORTANT: This must run on a self-hosted runner to access local browsers
     runs-on: self-hosted
 
     steps:
-    - name: سحب كود المستودع
+    - name: Checkout repository code
       uses: actions/checkout@v3
 
-    - name: إعداد بيئة Python
+    - name: Set up Python environment
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: تثبيت المكتبات من ملف requirements.txt
+    - name: Install dependencies from requirements.txt
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # <-- هذا هو التعديل المهم
+        pip install -r requirements.txt
 
-    - name: تشغيل سكربت سحب الكوكيز
+    - name: Run cookie extraction script
       run: python cookie_extractor.py
 
-    - name: رفع الكوكيز كـ artifact
+    - name: Upload cookies as artifact
       uses: actions/upload-artifact@v3
       with:
         name: cookies-files
