--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
-name: Extract Cookies
+name: Extract Cookies and Build Executable
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  extract-cookies:
-    # IMPORTANT: This must run on a self-hosted runner to access local browsers
+  run-and-build:
     runs-on: self-hosted
 
     steps:
@@ -18,16 +16,32 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies from requirements.txt
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pyinstaller  # <-- تثبيت أداة البناء
 
     - name: Run cookie extraction script
       run: python cookie_extractor.py
 
-    - name: Upload cookies as artifact
+    - name: Upload cookie files as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: cookies-files
+        name: cookie-files
         path: cookies/
+
+    # --- هذا هو الجزء الجديد والمهم لبناء الملف التنفيذي ---
+    - name: Build the executable with PyInstaller
+      run: > # <-- السهم يسمح بكتابة الأمر على عدة أسطر
+        pyinstaller 
+        --onefile 
+        --clean 
+        --name MyCookieExtractor 
+        cookie_extractor.py  # <-- اسم الملف الصحيح هنا
+
+    - name: Upload executable as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: executable-file
+        path: dist/MyCookieExtractor.exe # <-- مسار الملف التنفيذي
