--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,39 @@
-name: Extract Cookies and Build Executable
+name: Build Python Executable
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  run-and-build:
-    runs-on: self-hosted
+  build:
+    runs-on: windows-latest
 
     steps:
-    - name: Checkout repository code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+      # الخطوة 1: سحب الكود وملف requirements.txt
 
-    - name: Set up Python environment
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+      # الخطوة 2: إعداد بيئة بايثون
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
+        pip install pyinstaller  # تثبيت أداة البناء بشكل منفصل
+        pip install -r requirements.txt  # تثبيت المكتبات من الملف
+      # الخطوة 3: تثبيت المتطلبات
 
-    - name: Run cookie extraction script
-      run: python cookie_extractor.py
+    - name: Build executable
+      run: pyinstaller --onefile --noconsole cookie_extractor.py
+      # الخطوة 4: بناء الملف التنفيذي
 
-    - name: Upload cookie files as artifact
+    - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: cookie-files
-        path: cookies/
-
-    # --- THE CORRECTED BUILD STEP ---
-    - name: Build the executable with hidden imports
-      run: |
-        pyinstaller --onefile --clean --name MyCookieExtractor ^
-        --hidden-import=browser_cookie3.chrome ^
-        --hidden-import=browser_cookie3.firefox ^
-        --hidden-import=browser_cookie3.edge ^
-        --hidden-import=browser_cookie3.opera ^
-        --hidden-import=browser_cookie3.brave ^
-        --hidden-import=browser_cookie3.vivaldi ^
-        cookie_extractor.py
-
-    - name: Upload executable as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: executable-file
-        path: dist/MyCookieExtractor.exe
+        name: cookie-extractor-exe
+        path: dist/cookie_extractor.exe
+      # الخطوة 5: رفع الملف التنفيذي كـ "artifact"
