--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
-      # الخطوة 1: سحب الكود وملف requirements.txt
+    # --- تم التحديث هنا ---
+    - uses: actions/checkout@v4
+      # الخطوة 1: سحب الكود
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      # --- تم التحديث هنا ---
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
       # الخطوة 2: إعداد بيئة بايثون
@@ -23,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller  # تثبيت أداة البناء بشكل منفصل
-        pip install -r requirements.txt  # تثبيت المكتبات من الملف
+        pip install pyinstaller
+        pip install -r requirements.txt
       # الخطوة 3: تثبيت المتطلبات
 
     - name: Build executable
@@ -32,7 +34,8 @@ jobs:
       # الخطوة 4: بناء الملف التنفيذي
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      # --- تم التحديث هنا ---
+      uses: actions/upload-artifact@v4
       with:
         name: cookie-extractor-exe
         path: dist/cookie_extractor.exe
